--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,9 +30,12 @@ dependencies {
     //Add library
     implementation 'com.google.firebase:firebase-core:11.8.0'
     implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.firebaseui:firebase-ui-database:1.2.0'
     implementation 'com.github.jd-alexander:android-flat-button:v1.1'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.android.support:cardview-v7:26.+'
 }
 
 
