--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,11 @@ dependencies {
     implementation 'com.github.d-max:spots-dialog:0.7@aar'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:cardview-v7:26.+'
+    implementation 'com.android.support:design:26.+'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+
 }
+
 
 
 
