--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,11 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.+'
     implementation 'com.android.support:design:26.+'
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
 
 }
+
 
 
 
