--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".FoodListActivity" />
         <activity android:name=".FoodDetailActivity" />
-        <activity android:name=".CartActivity"></activity>
+        <activity android:name=".CartActivity" />
+        <activity android:name=".OrderActivity"></activity>
     </application>
 
 </manifest>
